--- a/javajam /menu.html
+++ b/javajam /menu.html
@@ -18,36 +18,58 @@
 <div id="wrapper">   
 <header>
         
-<h1>JavaJam Coffee Bar</h1>
+<h1><a href="index.html">JavaJam Coffee Bar</a></h1>
 
 </header>
 
-<nav><b>
-<a href="index.html">Home</a> &nbsp; 
-<a href="menu.html">Menu</a> &nbsp; 
-<a href="music.html">music</a> &nbsp; 
-<a href="jobs.html">Jobs</a>
-</b></nav>
+<nav>
+
+<ul>
+
+<li><a href="index.html">Home</a></li>
+<li><a href="menu.html">Menu</a></li>
+<li><a href="music.html">Music</a></li>
+<li><a href="jobs.html">Jobs</a></li>
+
+</ul>
+
+</nav>
 
 <main>
-<img src="images/mugs.jpg" alt="coffee mugs" align="right" width="270" height="299">
+
+<div id="heromugs"></div>
+
 <h2>Coffee at JavaJam!</h2>
  
+<p>Indulge in our locally roasted free-trade coffee and enjoy the aroma, the smooth taste,
+the caffeine! Join our Mug Club and get a 10% discount on each cup of coffee you
+purchase &mdash; ask the barista for details.
+</p>
 
-<dl>
+<section class="onethird">
 
-<dt><strong>
-Just Java
-</strong></dt>
-<dd>Regular house blend, decaffeinated coffee,<br> or flavor of the day.>Endless Cup $3.50</dd>
+<h3>Just Java</h3>
 
-<dt><strong>Cafe au Lait</strong></dt>
-<dd>House blended coffee infused into a smooth,<br> steamed milk.Single $4.00 Double $5.00</dd>
+<p> Regular house blend, decaffeinated coffee,<br> or flavor of the day. Endless Cup $3.50</p>
 
-<dt><strong>Iced Cappuccino</strong></dt>
-<dd>Sweetened espresso blended with icy-cold milk<br> and served in a chilled glass.Single $5.00 Double $6.50</dd>
+</section>
 
-</dl>
+<section class="onethird">
+
+<h3>Cafe au Lait</h3>
+
+<p>House blended coffee infused into a smooth, steamed milk.<br>Single $4.00 Double $5.00</p>
+
+</section>
+
+<section class="onethird">
+
+<h3>Iced Cappuccino</h3>
+
+ <p>Sweetened espresso blended with icy-cold milk and served in a chilled glass.<br>Single $5.00 Double $6.50</p>
+  
+</section>
+
         
 </main>
 
