--- a/javajam /menu.html
+++ b/javajam /menu.html
@@ -46,7 +46,9 @@ the caffeine! Join our Mug Club and get a 10% discount on each cup of coffee you
 purchase &mdash; ask the barista for details.
 </p>
 
-<section class="onethird">
+<div id="flow">
+
+<section>
 
 <h3>Just Java</h3>
 
@@ -54,7 +56,7 @@ purchase &mdash; ask the barista for details.
 
 </section>
 
-<section class="onethird">
+<section>
 
 <h3>Cafe au Lait</h3>
 
@@ -62,7 +64,7 @@ purchase &mdash; ask the barista for details.
 
 </section>
 
-<section class="onethird">
+<section>
 
 <h3>Iced Cappuccino</h3>
 
@@ -70,7 +72,8 @@ purchase &mdash; ask the barista for details.
   
 </section>
 
-        
+</div>
+
 </main>
 
 <footer>
