--- a/index.html
+++ b/index.html
@@ -36,15 +36,9 @@
         <ul>
             <li><a href="https://www.linkedin.com/" aria-label="linkedin"><i class="fab fa-linkedin"
                         aria-hidden="true"></i></a></li>
-            <li><a href="https://www.facebook.com/" aria-label="facebook"><i class="fab fa-facebook-square"
-                        aria-hidden="true"></i></a></li>
             <li><a href="https://www.instagram.com/?hl=en" aria-label="instagram"><i class="fab fa-instagram-square"
                         aria-hidden="true"></i></a></li>
-            <li><a href="https://twitter.com/?lang=en" aria-label="twitter"><i class="fab fa-twitter-square"
-                        aria-hidden="true"></i></a></li>
-            <li><a href="https://www.snapchat.com/" aria-label="snapchat"><i class="fab fa-snapchat-square"
-                        aria-hidden="true"></i></a></li>
-            <li><a href="mailto:Anumber@usu.edu" aria-label="email"><i class="fas fa-envelope-square"
+            <li><a href="mailto:a02087427@usu.edu" aria-label="email"><i class="fas fa-envelope-square"
                         aria-hidden="true"></i></a></li>
         </ul>
     </footer>
