--- a/javajam /menu.html
+++ b/javajam /menu.html
@@ -47,43 +47,33 @@ purchase &mdash; ask the barista for details.
 </p>
 
 <div id="flow">
-
-<section>
-
-<h3>Just Java</h3>
-
-<p> Regular house blend, decaffeinated coffee,<br> or flavor of the day. Endless Cup $3.50</p>
-
-</section>
-
-<section>
-
-<h3>Cafe au Lait</h3>
-
-<p>House blended coffee infused into a smooth, steamed milk.<br>Single $4.00 Double $5.00</p>
-
-</section>
-
-<section>
-
-<h3>Iced Cappuccino</h3>
-
- <p>Sweetened espresso blended with icy-cold milk and served in a chilled glass.<br>Single $5.00 Double $6.50</p>
-  
-</section>
-
+    <table>
+        <tr>
+          <th>Just Java</th>
+          <td>Regular house blend, decaffeinated coffee, or flavor of the day.<br>Endless Cup $3.50</td>
+        </tr>
+        <tr>
+          <th>Cafe au Lait</th>
+          <td>House blended coffee infused into a smooth, steamed milk.<br>Single $4.00 Double $5.00</td>
+        </tr>
+        <tr>
+          <th>Iced Cappuccino</th>
+          <td>Sweetened espresso blended with icy-cold milk and served in a chilled glass.<br>Single $5.00 Double $6.
+          </td>
+      </table>
 </div>
 
 </main>
 
 <footer>
-<small>
-<i>
 
 Copyright © 2023 JavaJam Coffee Bar
 <a href="mailto:joshuamorrill@gmail.com">joshuamorrill@gmail.com</a> </i>
-</small>   
+
 </footer>
+
 </div>
+
 </body>
+
 </html>
