--- a/javajam /index.html
+++ b/javajam /index.html
@@ -103,6 +103,11 @@ Ellison Bay, WI 54210 <br>
 Copyright © 2023 JavaJam Coffee Bar
 <a href="mailto:joshuamorrill@gmail.com">joshuamorrill@gmail.com</a>
   
+<div>
+    <p id="dateupdate"></p>
+    <script src="js/dateupdate.js"></script>
+</div>
+
 </footer>
 </div>
 </body>
