--- a/javajam /menu.html
+++ b/javajam /menu.html
@@ -12,6 +12,9 @@
 
 <link rel="shortcut icon" href="favicon.ico">
 
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.1/jquery.min.js"></script>
+<script src="js/common.js"></script>
+
 </head>
 
 <body>
@@ -69,6 +72,13 @@ purchase &mdash; ask the barista for details.
 
 Copyright © 2023 JavaJam Coffee Bar
 <a href="mailto:joshuamorrill@gmail.com">joshuamorrill@gmail.com</a> </i>
+
+
+<div>
+  <p id="dateupdate"></p>
+  <script src="js/dateupdate.js"></script>
+</div>
+
 
 </footer>
 
