--- a/javajam /music.html
+++ b/javajam /music.html
@@ -44,6 +44,9 @@
 11 pm for some music you won’t want to miss!
 </p>
 
+<p id="verify"></p>
+<script src="js/verifysenior.js"></script> 
+
 <h4>January</h4>
 
 <div class="details">
@@ -67,6 +70,12 @@ height="100"></a>Tahoe Greg is back from his tour. New songs. New stories.
 <footer>
 Copyright © 2023 JavaJam Coffee Bar
 <a href="mailto:joshuamorrill@gmail.com">joshuamorrill@gmail.com</a>
+
+<div>
+    <p id="dateupdate"></p>
+    <script src="js/dateupdate.js"></script>
+</div>
+
 </footer>
 </div>
 </body>
